[package]
name = "rspit"
version = "0.2.0"
edition = "2021"
authors = ["NaokiM03"]
description = "A command-line tool to run Rust snippet."
keywords = ["cli", "cargo", "tool", "command-line", "script"]
repository = "https://github.com/NaokiM03/rspit"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.27", features = ["derive"] }
rand = "0.8.5"
rayon = "1.6.0"
serde = "1.0.148"
serde_derive = "1.0.148"
sha2 = "0.10.6"
tempdir = "0.3.7"
tiny-ansi = "0.1.0"
toml = "0.5.9"

[[bin]]
name = "pit"
path = "src/main.rs"

[profile.release]
lto = true
