[package]
name = "rspit"
version = "0.2.2"
edition = "2021"
authors = ["NaokiM03"]
description = "A command-line tool to run Rust snippet."
keywords = ["cli", "cargo", "tool", "command-line", "script"]
repository = "https://github.com/NaokiM03/rspit"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
rand = "0.8.5"
rayon = "1.6.0"
serde = "1.0.149"
serde_derive = "1.0.149"
sha2 = "0.10.6"
tiny-ansi = "0.1.0"
toml = "0.5.9"

[[bin]]
name = "pit"
path = "src/main.rs"

[profile.release]
lto = true
